--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "~4.11.x",
-    "kerberos": "~0.0.x",
-    "parse": "~1.8.0",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "dotenv": "^7.0.0",
+    "express": "*",
+    "kerberos": "*",
+    "parse": "*",
     "parse-server": "*"
   },
   "scripts": {
